# trading-simulator-v2

./: Cargo.toml  DEVELOPMENT_LOG.md  PHASE1_REVIEW.md  README.md  STATUS_REPORT_2026-02-13.md  tauri.conf.json  test_display_fix.py  test_pnl_fix.py  web-ui-server.py
config/: combined.yaml  combined_strategy.yaml  delta_strangle.yaml  long_protection.yaml  long_protection_6mo.yaml  straddle_1dte.yaml  straddle_pt50.yaml
docs/: CONFIG_REFERENCE.md  phase8-per-leg-architecture.md  phase8-ui-design.md
docs/architecture/: domain-model.md  monte-carlo-framework.md  strategy-engine.md  universal-strategy-config.md
docs/decisions/: 001-language-selection.md  002-validation-strategy.md
src/: combined.rs  main.rs  tauri_main.rs  web_server.rs
src/calendar/: intraday.rs  mod.rs
src/config/: mod.rs
src/events/: mod.rs
src/prices/: mod.rs
src/pricing/: mod.rs
src/triggers/: mod.rs
ui/: index.html
