[package]
name = "trading-simulator-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
actix-web = "4"
actix-files = "0.6"

[[bin]]
name = "trading-simulator-v2"
path = "src/main.rs"

[[bin]]
name = "web-server"
path = "src/web_server.rs"
